# patent-agent

./: .gitignore  pyproject.toml  task-5b-report.md  task-5c-report.md  task-5d-report.md  task-5e-report.md  task-5f-report.md  task-5g-report.md  task-5h-report.md  task-5i-report.md  task-5j-report.md  task-8-fix-report.md  task-8-fix2-report.md  task-8-fix3-report.md  task-8-fix4-report.md  task-9-fix-report.md  task-9-fix3-report.md  task-9-fix4-report.md
.codex-plugin/: plugin.json
.superpowers/sdd/: phase-1-disclosure-fix-report.md  phase-1-metadata-fix-report.md  phase-1-provenance-fix-report.md  phase-1-provenance-fix2-report.md  task-5a-report.md
docs/: phase-1-acceptance.md
skills/cn-claim-drafting/: SKILL.md
skills/cn-claim-strategy/: SKILL.md
skills/cn-patent-case-intake/: SKILL.md
skills/cn-patent-orchestrator/: SKILL.md
skills/cn-patent-quality-review/: SKILL.md
skills/cn-specification-drafting/: SKILL.md
skills/mechanical-hardware-patent/: SKILL.md
skills/patent-document-export/: SKILL.md
skills/patent-invention-mining/: SKILL.md
skills/patent-prior-art-search/: SKILL.md
skills/patentability-analysis/: SKILL.md
skills/software-ai-patent/: SKILL.md
src/codex_patent/: cli.py  export_docx.py  models.py  repository.py  validation.py  workflow.py
templates/: cn-patent-application.docx
tests/: test_end_to_end.py  test_export_docx.py  test_models.py  test_packaging.py  test_plugin_contract.py  test_release.py  test_repository.py  test_validation.py  test_workflow.py
tests/skill_scenarios/: cn-claim-drafting-baseline.md  (+11 more)
(+22 files in other folders)
