[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-patent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "python-docx>=1.1,<2",
  "PyYAML>=6,<7"
]

[project.optional-dependencies]
test = ["pytest>=8.2,<9"]

[project.scripts]
codex-patent = "codex_patent.cli:app"

[tool.hatch.build.targets.wheel.force-include]
"templates/cn-patent-application.docx" = "codex_patent/templates/cn-patent-application.docx"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
